--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -14,6 +14,8 @@
 body {
      border: 1px dotted gray;
      padding: 20px;
+     font-family: 'Raleway', sans-serif;
+     background-color: rgb(228, 189, 196); 
 }
 
 .jumbotron {
@@ -31,4 +33,8 @@ body {
      right: 0;
      position: absolute;
      z-index: -1;
+}
+
+h4 { 
+     font-size: 20px;
 }
